# queue/models.go
@@ -1,0 +1,26 @@
+// Code generated by sqlc. DO NOT EDIT.
+
+package queue
+
+import (
+	"database/sql"
+)
+
+const (
+	StatusNew       = "new"
+	StatusStarted   = "started"
+	StatusRejected  = "rejected"
+	StatusReleased  = "released"
+	StatusCompleted = "completed"
+)
+
+type Task struct {
+	ID        uint32
+	SDHash    string
+	CreatedAt string
+	URL       string
+	Progress  sql.NullFloat64
+	StartedAt sql.NullString
+	Status    string
+	Type      string
+}
